2011-05-18  Ivan Maidanski  <ivmai@mail.ru>

	* include/private/gcconfig.h (MPROTECT_VDB): Enable for Solaris in
	single-threaded environment.

2011-05-18  Ivan Maidanski  <ivmai@mail.ru>

	* include/private/gcconfig.h (MPROTECT_VDB): Undefine if PROC_VDB.
	* tests/test.c (NUMBER_ROUND_UP): New macro.
	* tests/test.c (check_heap_stats): Round up total expected heap
	size to the nearest 4 MiB bound.
	* tests/test.c (check_heap_stats): Print the current and expected
	heap sizes in case of failure.

2011-05-18  Ivan Maidanski  <ivmai@mail.ru>

	* checksums.c (GC_check_blocks, GC_check_dirty): Do log printing
	only if GC_print_stats; print errors using GC_err_printf.
	* checksums.c (GC_check_blocks): Join adjacent printf() calls into
	a single one.

2011-05-17  Ivan Maidanski  <ivmai@mail.ru>

	* pthread_support.c (pthread_join): Add assertion (check thread is
	finished).
	* pthread_support.c (GC_register_my_thread): Don't detach the
	thread if invoked from the thread destructor.
	* win32_threads.c (GC_register_my_thread): Ditto.
	* win32_threads.c (GC_unregister_my_thread): Don't delete the
	thread (just set FINISHED) if the thread is not detached (only if
	GC_PTHREADS); add assertion (check the thread is not finished).
	* tests/threadkey_test.c (main): Join some created threads.

2011-05-17  Ivan Maidanski  <ivmai@mail.ru>

	* pthread_support.c (GC_delete_gc_thread): Rename "gc_id" local
	variable to "t".
	* win32_threads.c (GC_delete_gc_thread): Ditto.
	* pthread_support.c (pthread_join, pthread_detach,
	pthread_cancel): Rename "thread_gc_id" local variable to "t".
	* win32_threads.c (GC_pthread_detach): Ditto.
	* win32_threads.c (GC_delete_gc_thread): Remove "gc_nvid" local
	variable.
	* win32_threads.c (GC_pthread_join): Rename "joinee" local
	variable to "t".

2011-05-16  Ivan Maidanski  <ivmai@mail.ru>

	* pthread_stop_world.c (pthread_sigmask): Undefine even if not
	DEBUG_THREADS.
	* pthread_stop_world.c (GC_unblock_gc_signals): New function (only